# pylon

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude-flow/: .statusline-cache.json  .trend-cache.json
.github/workflows/: ci.yml  release.yml  slsa.yml  vex.yml
charts/pylon/: Chart.yaml  values.yaml
docker/: docker-compose.yaml  init-db.sql
docs/: SPECIFICATION.md  api-reference.md  architecture.md  design-media-agent-integrations.md  getting-started.md  google-workspace-cli-setup.md  gtm-multi-agent-implementation-plan.md  improvement-roadmap.md  infrastructure-sizing.md  lifecycle-ui-ux-audit-2026-03-11.md  product-lifecycle-v2-implementation-plan.md  pylon-concept.md  pylon-lp-brief-2026-03-13.md  pylon-lp-stitch-redesign-prompt-2026-03-13.md  仕様書.md
docs/adr/: 001-graph-engine-self-implementation.md  002-nats-message-bus.md  003-typescript-api-gateway.md  004-autonomy-ladder.md  005-rule-of-two.md  006-sandbox-by-default.md  007-deterministic-dag-execution-semantics.md  008-safety-context-and-delegation-boundaries.md  009-runtime-centered-bounded-autonomy.md  010-end-to-end-product-workflow-architecture.md  011-identity-aware-research.md
docs/architecture/: PROJECTS.md  agency-agents-analysis.md  agent-skills-compatibility-layer-design.md  agent-skills-production-refactor-plan.md  agent-skills-runtime-design.md  cleo-adoption-plan.md  design-phase-p0-p1-issues.md  design-prototype-quality-roadmap.md  design-runtime-telemetry-investigation-request.md  experiment-campaigns-epics-and-tickets.md  experiment-campaigns-production-plan.md  lifecycle-governance-modes.md  lifecycle-refactor-implementation-plan.md  module-map.md  multi-model-implementation-plan.md  multi-model-provider-spec.md  production-readiness-implementation-plan.md  pylon-evolution-plan.md  pylon-product-lifecycle-multi-agent-flow.md  pylon-vnext-implementation-plan.md  pylon-vnext-target-architecture.md  pylon-vnext-type-design.md  runtime-flows.md  value-contract-outcome-telemetry-design.md  value-contract-outcome-telemetry-prd.md  workflow-safety-implementation-plan.md
docs/compliance/: README.md  iso27001-alignment.md  soc2-alignment.md
docs/prd/: identity-aware-research.md
docs/specs/: research-quality-gates-identity-aware.md
examples/: cli_bridge_demo.py  multi_model_demo.py  pylon.example.yaml
examples/autonomous-cicd-pipeline/: README.md  pylon.yaml
examples/autonomous-coding-agent/: README.md  pylon.yaml
examples/autonomous-debugging-swarm/: README.md  pylon.yaml
examples/autonomous-research-report/: README.md  pylon.yaml
examples/autonomous-sdk-usage/: README.md  main.py
scripts/: generate_vex.py
src/core/: __init__.py
src/pylon/: __init__.py  di.py  errors.py  types.py
test-results/manual-journey-persist-probe-fix/: summary-after-fix.json  summary-research-route.json
tests/: conftest.py
tests/integration/: conftest.py  test_end_to_end.py  test_workflow_repository.py  test_workflow_safety.py
tests/unit/: conftest.py  test_a2a.py  test_adaptive_router.py  test_agent_runtime.py  test_anthropic_provider.py  test_api.py  test_api_factory.py  test_approval.py  test_approval_policy.py  test_async_runs.py  test_audit_worm.py  test_autonomy_evaluation.py  test_autonomy_goals.py  test_autonomy_routing.py  test_autonomy_termination.py  test_benchmarks.py  test_channels.py  test_claude_code_bridge.py  test_cli_bridge.py  test_cli_commands.py  test_codex_bridge.py  test_coding_loop.py  test_config.py  test_context_projection.py  test_context_provider.py  test_control_plane_factory.py  test_cost_estimator.py  test_cost_optimizer.py  test_cost_tracking.py  test_dcs_analysis.py  test_decision_context.py  test_development_repo_execution.py  test_development_workspace.py  test_di.py  test_distillation.py  test_doctor_fix.py  test_dr.py  test_dsl.py  test_errors.py  test_event_store.py  (+73 more)
ui/: .npmrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/scripts/: ads_reference_data.py  claude_mcp_delegate.py  dev_seed_agents.py  figma_mcp_probe.py  figma_rest.py  gemini_stitch_delegate.py  gws  gws_delegated_token.py  run_todo_workflow.py  start_backend.py  watch_gws_client_secret.py  watch_gws_service_account.py
ui/src/: App.tsx  index.css  (+2 more)
(+694 files in other folders)
