[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylon-ai"
version = "0.1.0"
description = "Autonomous AI Agent Orchestration Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "OpsData", email = "dev@opsdata.ai" },
]
keywords = ["ai", "agent", "orchestration", "mcp", "a2a", "sandbox"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "asyncpg>=0.30",
    "nats-py>=2.9",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/noriyuki-nakano-opsdata/pylon"
Repository = "https://github.com/noriyuki-nakano-opsdata/pylon"
Issues = "https://github.com/noriyuki-nakano-opsdata/pylon/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pylon"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B"]
ignore = ["S307"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
