[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylon-ai"
version = "0.2.0"
description = "Autonomous AI Agent Orchestration Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Pylon Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "build",
]
anthropic = [
    "anthropic>=0.30",
]

[project.scripts]
pylon = "pylon.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/pylon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
